style: form section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,12 @@
     background-color: #131f53;
 }
 
+/*----------------------------------------------------- General */
+
+p {
+    margin-bottom: 0;
+}
+
 /*----------------------------------------------------- Main Section */
 
 .logo-row {
