style: top hr styled in brand colors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,5 +34,16 @@ p {
     border-color: #db0008;
 }
 
-/*----------------------------------------------------- About Section */
+/*----------------------------------------------------- Borders */
 
+.first-border {
+    margin-top: 66px;
+}
+
+.border-danger  {
+    border-color: #db0008;
+}
+
+hr {
+    opacity: 100%;
+}
