add: red background color

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,10 @@
     background-color: #131f53;
 }
 
+.bg-color-2 {
+    background-color: #db0008;
+}
+
 /*----------------------------------------------------- General */
 
 p {
