style: margin and padding removed from body and html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,12 @@
 
+body,html {
+    margin: 0;
+    padding: 0;
+}
+* {
+    box-sizing: border-box;
+}
+
 /*----------------------------------------------------- Colors */
 
 .txt-color-1 {
@@ -46,6 +54,12 @@ p {
 
 hr {
     opacity: 100%;
+}
+
+/*----------------------------------------------------- Game Section */
+
+.game-area {
+    height: calc(100vh - 194px);
 }
 
 /*----------------------------------------------------- Question Section */
