add: temporary correct and incorrect colors added

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,3 +103,11 @@ hr {
 .confirmation-text p {
     font-size: 5rem;
 }
+
+.correct {
+    background-color: black;
+}
+
+.incorrect {
+    background-color: orange;
+}
