add: football color change to team that scored to show correct or incorrect answers

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,31 +108,7 @@ hr {
     font-size: 5rem;
 }
 
-.correct {
-    background-color: green;
-    color: white;
-}
-
-.incorrect {
-    background-color: red;
-    color: white;
-}
-
-/*----------------------------------------------------- Progress Bar */
-
-#progress-bar {
-    height: auto;
-    width: auto;
-    border-bottom: #db0008 1px solid;
-    text-align: start;
-}
-
-.progress-bar-indicator {
-    background-color: #db0008;
-    width: 0%;
-}
-
-
+/*----------------------------------------------------- myModal2 */
 
 #modal-arsenal-logo:hover {
     background-color: #131f53;
