--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,6 @@ hr {
 
 /*----------------------------------------------------- Match Toast */
 
-#quotes {
+#match-quote {
     font-size: 3rem;
 }
