style: end.html icons enlarged

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,7 +134,8 @@ hr {
     font-size: 3rem;
 }
 
+/*----------------------------------------------------- Icons */
 
-.fa-thumbs-down {
+.fa-thumbs-down, .fa-trophy {
     font-size: 10rem;
 }
