--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,18 @@ h2 {
     display: none;
   }
 
+.navbar-toggler-icon {
+    background-image: url(../images/hamburger-menu-icon.png);
+}
+
+button.navbar-toggler {
+    border: none;
+}
+
+button.navbar-toggler:focus {
+    box-shadow: none;
+}
+
 /*----------------------------------------------------- Main Section */
 
 .logo-row {
