--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,3 +248,14 @@ hr {
     margin: 0; /* Remove margins */
 }
 
+
+/*----------------------------------------------------- Media Queries */
+
+/* Breakpoint taken from bootstrap for consistency */
+@media only screen and (max-width: 768px) {
+    .hover-color:hover {
+        background-color: #131f53;
+        color: #fff;
+    }
+}
+
