--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #131f53;
+}
+
 /*----------------------------------------------------- Colors */
 
 .txt-color-1 {
