--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,7 +160,7 @@ hr {
     margin-bottom: 0;
 }
 
-.hover-color:hover {
+.hover-color:hover, .hover-color:hover a {
     background-color: #fff;
     color:#131f53;
 }
